<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/add_shortcut_short_label"
        android:shortcutLongLabel="@string/add_shortcut_long_label"
        android:shortcutDisabledMessage="@string/add_disabled_message">
        <intent
            android:action="android.intent.action.INSERT"
            android:targetPackage="com.buildertrend.factfinder"
            android:targetClass="com.buildertrend.factfinder.MainActivity"
            />
    </shortcut>
    <shortcut
        android:shortcutId="select"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/select_shortcut_short_label"
        android:shortcutLongLabel="@string/select_shortcut_long_label"
        android:shortcutDisabledMessage="@string/select_disabled_message">
        <intent
            android:action="android.intent.action.GET_CONTENT"
            android:targetPackage="com.buildertrend.factfinder"
            android:targetClass="com.buildertrend.factfinder.MainActivity"
            />
    </shortcut>
</shortcuts>
